# python-equitie

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ai-workflow.md  docker-compose.yml  nginx.conf  proposal-case-study.md  proposal-production-saas.md  pyproject.toml  vercel.json
.agent/rules/: coding.mdc  docs.mdc  refactor.mdc  review.mdc  testing.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml
api/: chat.py
backend/: AGENT.md  main.py
backend/agent/: prompt.py  runner.py  tools.py
backend/api/: router.py
backend/data_layer/: fx.py  (+5 more)
docs/: ENGINEERING-STANDARDS.md  EXECUTION-RULES.md  KICKOFF-PROMPT.md  PLAN.md  PR-E2-data-layer.md  SECURITY.md  walkthrough-script.md
equitie-app/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  proposal-case-study.md  proposal-production-saas.md  pyproject.toml  supervisord.conf
equitie-app/.agent/rules/: coding.mdc  refactor.mdc  review.mdc  testing.mdc
equitie-app/.github/workflows/: ci.yml
equitie-app/api/: chat.py
equitie-app/backend/: logging_config.py  main.py  settings.py
equitie-app/backend/api/: router.py
equitie-app/backend/tests/: test_health.py
equitie-app/docs/: AGENT-OS-KERNEL.md  BEGINNER-GUIDE.md  ENGINEERING-STANDARDS.md  EXECUTION-RULES.md  KICKOFF-PROMPT.md  PLAN.md  SECURITY.md  TOKEN-EFFICIENCY.md
equitie-app/docs/tasks/: todo.md
equitie-app/frontend/: AGENT.md
equitie-app/scripts/: start.sh  stop.sh
frontend/: package-lock.json  package.json
(+13 files in other folders)
