[project]
name = "equitie-app"
version = "0.1.0"
description = "EquiTie AI Portfolio Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "pandas>=2.2.2",
    "mangum>=0.17.0",
    "structlog>=24.1.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "pandas-stubs>=2.2.2.240603"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"] # Include isort (I)
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["backend"]
